# dnd-adventure-tpl

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  README.md  _config.yml  docker-compose.yml  index.html  jekyll-serve.sh  package-lock.json  package.json  playwright.config.cjs  search-results.html  search.json
_data/: chapters.yml  encounters.yml  locations.yml  monsters.yml  npcs.yml  quicklinks.yml  toc_dirs.yml
_frontmattertpls/: appendix.html  encounter.html  episode.yml  location.html  monster.html  monster.yml  npc.html  npc.yml
_includes/: card.html  ch_ep_sc.html  chapter_toc.html  chatbot_shell.html  gallery.html  gallery_card.html  header.html  heroimage.html  locations_toc.html  (+5 more)
services/llm_api/: .env.example  Dockerfile  README.md  pyproject.toml
services/llm_api/src/llm_api/: app.py  constants.py
services/llm_api/src/llm_api/generators/: base.py  chapter.py  dispatch.py  encounter.py  location.py  monster.py  npc.py
services/llm_api/src/llm_api/models/: generated.py  requests.py  types.py
services/llm_api/src/llm_api/providers/: factory.py
services/llm_api/src/llm_api/routes/: generate.py  health.py  meta.py  promote.py
services/llm_api/src/llm_api/scripts/: promote_draft.py
services/llm_api/src/llm_api/services/: active_campaign.py  body_size_limit.py  config.py  drafts.py  errors.py  ids.py  kinds.py  limits.py  logging.py  promotion.py  promotion_mapping.py  registry.py  request_id.py  responses.py  security.py
services/llm_api/tests/: conftest.py  test_draft_writer.py  test_ids.py  test_required_yaml_keys.py
(+149 files in other folders)
