[project]
name = "llm-api"
version = "0.1.0"
description = "LLM-backed draft content generation API for the dnd-adventure-tpl template"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "UNLICENSED" }

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pydantic-ai>=0.0.49",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "python-slugify>=8.0",
  "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
